[package]
name = "bolt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5"
fuzzy-matcher = "0.3"
regex = "1"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sysinfo = "0.30"
toml = "0.8"
walkdir = "2"
which = "7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
